# GDG-AI-Hack-2025

./: .env  .gitignore  README.md  all.txt  data.txt  english_professor.txt  pyproject.toml  requirements.txt  science_professor.txt
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: DebateWinnerScreen.js
frontend/src/pages/: IndexPage.js  ProfessorPage.js
frontend_gemini/public/: index.html
frontend_gemini/src/: App.js
frontend_gemini/src/components/: Button.js  DebateWinnerScreen.js  ProfessorCard.js  RightSidebar.js
frontend_gemini/src/context/: AppContext.js
frontend_gemini/src/pages/: DebatePage.js  IndexPage.js  LecturePage.js
src/: agent.py  main.py  test.py  test_2.py  test_3.py  test_api_key.py
src/Test_langchain/: agent_template.py  test.py  test_2.py  test_debate.py  test_intervention.py
