[project]
name = "gdghack"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-adk>=0.5.0",
    "graphviz>=0.20.3",
    "ipython>=9.2.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.3",
    "uvicorn>=0.34.2",
]
